Bug 1240622 - Guard mCheckerboardEvent with a mutex to avoid races. r=botond